<resources>
    <string name="app_name">Shared Preferences</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="default_name">No Name</string>
    <string name="default_email">No Email</string>
    <string name="phone">Phone Number</string>
    <string name="default_phone">No Phone Number</string>
    <string name="default_age">No Age</string>
    <string name="age">Age</string>
    <string name="tv_theme">Theme Mode</string>
    <string name="default_theme">System Default</string>
    <string name="setting">SETTING</string>
    <string name="main_title">Dashboard</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SIMPAN</string>
    <string name="setting_page">Setting</string>
    <string name="field_required">Kolom Tidak Boleh Kosong!</string>
    <string name="email_is_not_valid">Email Tidak Valid!</string>
    <string name="field_digit_only">Kolom Hanya Untuk Angka!</string>
    <string name="hobi">Hobi</string>
    <string name="alamat">Alamat</string>
    <string name="default_hobi">hobi</string>
</resources>